--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -7,13 +7,13 @@ html.dark {
     --el-color-primary-light-8: rgb(28.8, 47.6, 67);
     --el-color-primary-light-9: rgb(24.4, 33.8, 43.5);
     --el-color-primary-dark-2: rgb(102.2, 177.4, 255);
-    --el-color-success: #67c23a;
-    --el-color-success-light-3: rgb(78.1, 141.8, 46.6);
-    --el-color-success-light-5: rgb(61.5, 107, 39);
-    --el-color-success-light-7: rgb(44.9, 72.2, 31.4);
-    --el-color-success-light-8: rgb(36.6, 54.8, 27.6);
-    --el-color-success-light-9: rgb(28.3, 37.4, 23.8);
-    --el-color-success-dark-2: rgb(133.4, 206.2, 97.4);
+    --el-color-success: #07b939;
+    --el-color-success-light-3: rgb(62, 155, 18);
+    --el-color-success-light-5: rgb(61, 107, 39);
+    --el-color-success-light-7: rgb(44, 72, 31);
+    --el-color-success-light-8: rgb(36, 54, 27);
+    --el-color-success-light-9: rgb(28, 37, 23);
+    --el-color-success-dark-2: #14d24a;
     --el-color-warning: #e6a23c;
     --el-color-warning-light-3: rgb(167, 119.4, 48);
     --el-color-warning-light-5: #7d5b28;
