fm cart template

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -21,7 +21,7 @@ html.dark {
     --el-color-warning-light-8: rgb(62, 48.4, 28);
     --el-color-warning-light-9: rgb(41, 34.2, 24);
     --el-color-warning-dark-2: rgb(235, 180.6, 99);
-    --el-color-danger: #f56c6c;
+    --el-color-danger: #e34242;
     --el-color-danger-light-3: rgb(177.5, 81.6, 81.6);
     --el-color-danger-light-5: rgb(132.5, 64, 64);
     --el-color-danger-light-7: rgb(87.5, 46.4, 46.4);
