product refill update

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -14,13 +14,13 @@ html.dark {
     --el-color-success-light-8: rgb(36, 54, 27);
     --el-color-success-light-9: rgb(28, 37, 23);
     --el-color-success-dark-2: #14d24a;
-    --el-color-warning: #e6a23c;
-    --el-color-warning-light-3: rgb(167, 119.4, 48);
+    --el-color-warning: #cc8013;
+    --el-color-warning-light-3: rgb(238, 161, 46);
     --el-color-warning-light-5: #7d5b28;
-    --el-color-warning-light-7: rgb(83, 62.6, 32);
-    --el-color-warning-light-8: rgb(62, 48.4, 28);
-    --el-color-warning-light-9: rgb(41, 34.2, 24);
-    --el-color-warning-dark-2: rgb(235, 180.6, 99);
+    --el-color-warning-light-7: rgb(83, 62, 32);
+    --el-color-warning-light-8: rgb(62, 48, 28);
+    --el-color-warning-light-9: rgb(41, 34, 24);
+    --el-color-warning-dark-2: rgb(235, 180, 99);
     --el-color-danger: #e34242;
     --el-color-danger-light-3: rgb(177.5, 81.6, 81.6);
     --el-color-danger-light-5: rgb(132.5, 64, 64);
