branch map selection

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -7,8 +7,8 @@ html.dark {
     --el-color-primary-light-8: rgb(28, 47, 67);
     --el-color-primary-light-9: rgb(24, 33, 43);
     --el-color-primary-dark-2: rgb(51, 143, 243);
-    --el-color-success: #07b939;
-    --el-color-success-light-3: rgb(62, 155, 18);
+    --el-color-success: #06a231;
+    --el-color-success-light-3: rgb(21, 183, 10);
     --el-color-success-light-5: rgb(61, 107, 39);
     --el-color-success-light-7: rgb(44, 72, 31);
     --el-color-success-light-8: rgb(36, 54, 27);
