--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -242,3 +242,13 @@ button, a {
     @apply bg-background text-foreground;
   }
 }
+
+.loaded-enter-active,
+.loaded-leave-active {
+  transition: all 0.5s ease;
+}
+
+.loaded-enter-from,
+.loaded-leave-to {
+  opacity: 0;
+}
